test/compile-fail/resolution/pub/in-non-visible-ancestor-mod/expected.txt
error: this item is private in `a`
 --> top.rhdl:3:22
  |
3 |         pub(in crate::a) struct c {}
  |                       ^ private in this scope
